# stargan-v2

./: .gitignore  Dockerfile  pyproject.toml
core/: data_loader.py  model.py
