[project]
name = "stargan-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">= 3.12"
dependencies = [
     "colorama==0.4.6",
    "ffmpeg-python==0.2.0",
    "filelock==3.18.0",
    "fsspec==2025.5.1",
    "future==1.0.0",
    "imageio==2.37.0",
    "jinja2==3.1.6",
    "lazy-loader==0.4",
    "markupsafe==3.0.2",
    "mpmath==1.3.0",
    "munch==4.0.0",
    "networkx==3.5",
    "numpy==2.3.0",
    "opencv-python==4.11.0.86",
    "packaging==25.0",
    "pillow==11.2.1",
    "scikit-image==0.25.2",
    "scipy==1.15.3",
    "setuptools==80.9.0",
    "sympy==1.13.1",
    "tifffile==2025.6.1",
    "torch==2.5.1",
    "torchvision==0.20.1",
    "tqdm==4.67.1",
    "typing-extensions==4.14.0",
    "gdown==4.7.3",
]
